# catshell

./: Cargo.toml  README.md  terminal_ui.html
release/: README.md
src/: cat.rs  cd.rs  cmatrix.rs  curl.rs  ls.rs  main.rs  mkdir.rs  open.rs  open_browser.rs  ping.rs  pwd.rs  rm.rs  server.rs  tui.rs  uname.rs  vim.rs  zip.rs
